packages/stylist-macros/tests/css_macro/block_in_attribute-fail.stderr
error: expected a valid part of an attribute, got a block. Did you mean to write `${..}` to inject an expression?
 --> $DIR/block_in_attribute-fail.rs:5:31
  |
5 |             background-color: {should_be_expression};
  |                               ^^^^^^^^^^^^^^^^^^^^^^
