packages/stylist-macros/tests/css_macro/block_in_attribute-fail.rs
fn main() {
    let _ = stylist::css! {
        .outer {
            border: ${is_an_expression};
            background-color: {should_be_expression};
        }
    };
}
